# pie

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  TASKS.md  build.rs  skills
.github/workflows/: ci.yml
.pie/: SUBAGENT_PROMPT.md  SYSTEM_PROMPT.md
.pie/skills/developer/: SKILL.md
.pie/skills/explore/: SKILL.md
.pie/skills/filesystem/: SKILL.md
.pie/skills/review/: SKILL.md
scripts/: test.py
skills/bash/: SKILL.md
skills/explore/: SKILL.md
src/: SUBAGENT_PROMPT.md  SYSTEM_PROMPT.md  afm.rs  agent.rs  aisdk_appleai.rs  bash.rs  cmd.rs  ffi.rs  interactive.rs  main.rs  prompt.rs  provider.rs  router.rs  shell.rs  skill.rs  utils.rs
src/core/: SUBAGENT_PROMPT.md  SYSTEM_PROMPT.md  agent.rs  config.rs  mod.rs  output.rs  prompt.md  prompt.rs  sandbox.rs  session.rs  skill.rs  skill_rules.md  tools.rs  utils.rs
src/core/db/: mod.rs
src/core/db/migrations/: V1__initial.sql
src/providers/: apple.rs  mod.rs  openai.rs  tool_compat.rs
src/ui/: interactive.rs
swift/: apple-ai.swift
tests/: tests.yaml
