[package]
name = "pie"
version = "0.1.0"
edition = "2021"

[dependencies]
aisdk = { git = "https://github.com/qretaio/aisdk", features = ["openaicompatible", "openai"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
chrono = "0.4.44"
minijinja = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
