[package]
name = "pie"
version = "0.1.0"
edition = "2024"

[dependencies]
aisdk = { git = "https://github.com/qretaio/aisdk", features = ["openaicompatible", "openai"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
strum = { version = "0.28", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
minijinja = "2"

rusqlite = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"
refinery = { version = "0.9", features = ["rusqlite"] }
uuid = { version = "1", features = ["v7"] }

[profile.release]
lto = true
panic = "abort"
strip = true
